computing embeddings with cifake dataset script

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Datasets (too big to be in the repo)
+/datasets
+
+# Metadata
+.DS_Store
+*.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
